--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="card">
-        <img id="userPhoto" alt="User photo" />
+        <img id="userPhoto" src="q.png" alt="User photo" />
         <div id="userInfo">
             Имя: <span id="name"></span><br/>
             Фамилия: <span id="surname"></span><br/>
