Now using fapi5.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="http://api.odnoklassniki.ru/js/fapi.js" defer="defer"></script>
+    <script type="text/javascript" src="http://api.odnoklassniki.ru/js/fapi5.js" defer="defer"></script>
     <script type="text/javascript" src="script.js" defer="defer"></script>
     
     <title>Example 1</title>
