--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             Случайный друг:<br/>
             <span id="random_friend_name_surname"></span>
         </div>
+        
+        <div id="buttons">
+            <button onclick="checkPublishPermission();return false;">Есть ли разрешение на публикацию?</button>
+            <button onclick="requirePublishPermission();return false;">Запросить разрешение</button>
+        </div>
     </div>
 
 
