stream.publish returns ok

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         
         <div id="buttons">
-            <button onclick="checkPublishPermission();return false;">Есть ли разрешение на публикацию?</button>
-            <button onclick="requirePublishPermission();return false;">Запросить разрешение</button>
+            <button onclick="publish();return false;">Опубликовать</button>
+            <!-- <button onclick="requirePublishPermission();return false;">Запросить разрешение</button> -->
         </div>
     </div>
 
