--- a/en/index.html
+++ b/en/index.html
@@ -12,13 +12,13 @@
     <div id="card">
         <img id="userPhoto" src="q.png" alt="User photo" />
         <div id="userInfo">
-            Имя: <span id="name"></span><br/>
-            Фамилия: <span id="surname"></span><br/>
-            Город: <span id="city"></span><br/>
+            Name: <span id="name"></span><br/>
+            Surname: <span id="surname"></span><br/>
+            City: <span id="city"></span><br/>
         </div>
         
         <div id="random_friend">
-            Случайный друг:<br/>
+            Random friend:<br/>
             <span id="random_friend_name_surname"></span>
         </div>
     </div>
