Publishing now works.

--- a/en/index.html
+++ b/en/index.html
@@ -21,6 +21,10 @@
             Random friend:<br/>
             <span id="random_friend_name_surname"></span>
         </div>
+        
+        <div id="buttons">
+            <button onclick="publish();return false;">Publish</button>
+        </div>
     </div>
 
 
