Added checking and requesting ask permission example to russian version

--- a/ru/index.html
+++ b/ru/index.html
@@ -23,7 +23,9 @@
         </div>
         
         <div id="buttons">
-            <button onclick="publish();return false;">Опубликовать</button>
+            <button onclick="publish();return false;">Опубликовать запись в ленте</button>
+            <button onclick="checkSetStatusPermission();return false;">Проверить разрешение на изменение статуса</button>
+            <button onclick="askSetStatusPermission();return false;">Запросить разрешение на изменение статуса</button>
         </div>
     </div>
 
