Added checking and requesting set status permission to english version

--- a/en/index.html
+++ b/en/index.html
@@ -23,7 +23,9 @@
         </div>
         
         <div id="buttons">
-            <button onclick="publish();return false;">Publish</button>
+            <button onclick="publish();return false;">Publish to stream</button>
+            <button onclick="checkSetStatusPermission();return false;">Check "SET STATUS" permission</button>
+            <button onclick="askSetStatusPermission();return false;">Acquire "SET STATUS" permission</button>
         </div>
     </div>
 
