Added example of setting status to both english and russian versions

--- a/en/index.html
+++ b/en/index.html
@@ -26,6 +26,8 @@
             <button onclick="publish();return false;">Publish to stream</button>
             <button onclick="checkSetStatusPermission();return false;">Check "SET STATUS" permission</button>
             <button onclick="askSetStatusPermission();return false;">Acquire "SET STATUS" permission</button>
+            <button onclick="setUserStatus();return false;">Set status:</button>
+            <input type="text" id="statusInput"/>
         </div>
     </div>
 
