--- a/ru/index.html
+++ b/ru/index.html
@@ -26,6 +26,8 @@
             <button onclick="publish();return false;">Опубликовать запись в ленте</button>
             <button onclick="checkSetStatusPermission();return false;">Проверить разрешение на изменение статуса</button>
             <button onclick="askSetStatusPermission();return false;">Запросить разрешение на изменение статуса</button>
+            <button onclick="setUserStatus();return false;">Установить статус:</button>
+            <input type="text" id="statusInput"/>
         </div>
     </div>
 
