Added showInvite() examples to both russian and english versions

--- a/en/index.html
+++ b/en/index.html
@@ -28,6 +28,8 @@
             <button onclick="askSetStatusPermission();return false;">Acquire "SET STATUS" permission</button>
             <button onclick="setUserStatus();return false;">Set status:</button>
             <input type="text" id="statusInput"/>
+            <button onclick="showInvite();return false;">Invite</button>
+            <button onclick="showInvite2();return false;">Invite more</button
         </div>
     </div>
 
