--- a/ru/index.html
+++ b/ru/index.html
@@ -28,6 +28,8 @@
             <button onclick="askSetStatusPermission();return false;">Запросить разрешение на изменение статуса</button>
             <button onclick="setUserStatus();return false;">Установить статус:</button>
             <input type="text" id="statusInput"/>
+            <button onclick="showInvite();return false;">Пригласить</button>
+            <button onclick="showInvite2();return false;">Пригласить ещё</button>
         </div>
     </div>
 
