Added examples for showNotification() for both russian and english versions

--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,9 @@
             <button onclick="setUserStatus();return false;">Set status:</button>
             <input type="text" id="statusInput"/>
             <button onclick="showInvite();return false;">Invite</button>
-            <button onclick="showInvite2();return false;">Invite more</button
+            <button onclick="showInvite2();return false;">Invite more</button>
+            <button onclick="showNotification();return false;">Notify</button>
+            <button onclick="showNotification2();return false;">Notify more</button>
         </div>
     </div>
 
