--- a/ru/index.html
+++ b/ru/index.html
@@ -30,6 +30,8 @@
             <input type="text" id="statusInput"/>
             <button onclick="showInvite();return false;">Пригласить</button>
             <button onclick="showInvite2();return false;">Пригласить ещё</button>
+            <button onclick="showNotification();return false;">Уведомить</button>
+            <button onclick="showNotification();return false;">Уведомить ещё</button>
         </div>
     </div>
 
