Added examples of showPayment() to both russian and english versions + simple server-side confirmation. There is no server-side payment check, it is written in comments.

--- a/en/index.html
+++ b/en/index.html
@@ -32,6 +32,7 @@
             <button onclick="showInvite2();return false;">Invite more</button>
             <button onclick="showNotification();return false;">Notify</button>
             <button onclick="showNotification2();return false;">Notify more</button>
+            <button onclick="showPayment();return false;">Pay</button>
         </div>
     </div>
 
