--- a/ru/index.html
+++ b/ru/index.html
@@ -31,7 +31,8 @@
             <button onclick="showInvite();return false;">Пригласить</button>
             <button onclick="showInvite2();return false;">Пригласить ещё</button>
             <button onclick="showNotification();return false;">Уведомить</button>
-            <button onclick="showNotification();return false;">Уведомить ещё</button>
+            <button onclick="showNotification2();return false;">Уведомить ещё</button>
+            <button onclick="showPayment();return false;">Заплатить</button>
         </div>
     </div>
 
