Added example for showPortalPayment() in both russian and english versions.

--- a/en/index.html
+++ b/en/index.html
@@ -33,6 +33,7 @@
             <button onclick="showNotification();return false;">Notify</button>
             <button onclick="showNotification2();return false;">Notify more</button>
             <button onclick="showPayment();return false;">Pay</button>
+            <button onclick="showPortalPayment();return false;">Buy oks</button>
         </div>
     </div>
 
