--- a/ru/index.html
+++ b/ru/index.html
@@ -33,6 +33,7 @@
             <button onclick="showNotification();return false;">Уведомить</button>
             <button onclick="showNotification2();return false;">Уведомить ещё</button>
             <button onclick="showPayment();return false;">Заплатить</button>
+            <button onclick="showPortalPayment();return false;">Пополнить счет ОК</button>
         </div>
     </div>
 
