Added examples for setWindowSize() for both russian and english versions.

--- a/en/index.html
+++ b/en/index.html
@@ -34,6 +34,7 @@
             <button onclick="showNotification2();return false;">Notify more</button>
             <button onclick="showPayment();return false;">Pay</button>
             <button onclick="showPortalPayment();return false;">Buy oks</button>
+            <button onclick="setWindowSize(700,1000);return false;">Change window size</button>
         </div>
     </div>
 
