--- a/ru/index.html
+++ b/ru/index.html
@@ -34,6 +34,7 @@
             <button onclick="showNotification2();return false;">Уведомить ещё</button>
             <button onclick="showPayment();return false;">Заплатить</button>
             <button onclick="showPortalPayment();return false;">Пополнить счет ОК</button>
+            <button onclick="setWindowSize(700,1000);return false;">Изменить размер окна</button>
         </div>
     </div>
 
