Added scrollToTop and getPageInfo examples.

--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,9 @@
             <button onclick="showNotification2();return false;">Notify more</button>
             <button onclick="showPayment();return false;">Pay</button>
             <button onclick="showPortalPayment();return false;">Buy oks</button>
-            <button onclick="setWindowSize(700,1000);return false;">Change window size</button>
+            <button onclick="setWindowSize(700,1500);return false;">Change window size</button>
+            <button onclick="scrollToTop();return false;">Scroll to top</button>
+            <button onclick="getPageInfo();return false;">Get page info</button>
         </div>
     </div>
 
