--- a/ru/index.html
+++ b/ru/index.html
@@ -34,7 +34,9 @@
             <button onclick="showNotification2();return false;">Уведомить ещё</button>
             <button onclick="showPayment();return false;">Заплатить</button>
             <button onclick="showPortalPayment();return false;">Пополнить счет ОК</button>
-            <button onclick="setWindowSize(700,1000);return false;">Изменить размер окна</button>
+            <button onclick="setWindowSize(700,1500);return false;">Изменить размер окна</button>
+            <button onclick="scrollToTop();return false;">Переместить к началу</button>
+            <button onclick="getPageInfo();return false;">Информация о странице</button>
         </div>
     </div>
 
